       'Showdown in the Northern Swamp' (bug #23668)
 * Graphics:
   * New standing animation for the Dwarvish Runesmith
 * Music and sound effects:
   * New dwarf hit and die sounds.
 * User interface:
   * GUI2:
     * stacked_widget can optionally display a single layer at a time. This
       may be used to implement dialogs with multiple pages or tabs.
 * Miscellaneous and bug fixes:
   * Fixed unbound memory read in internal time formatting code with
     specially-crafted input.

Version 1.13.1:
 * Security fixes:
   * Disallowed inclusion of .pbl files from WML, independent of extension
     case (CVE-2015-5069, CVE-2015-5070, bug #23504).
 * AI:
   * Fast Micro AI: exclude hidden enemies from attack evaluation by default;
     add optional key attack_hidden_enemies to override this
   * Lua AI helper functions: fix bug crashing the AI when number= is not set in
     a unit attack definition
   * Micro AIs: add a warning and avoid crash when a non-existing side is used
     in the [micro_ai] tag
 * Campaigns:
   * Dead Water:
     * The Stun effect now expires at the stunned unit's side turn end
   * Under the Burning Suns:
     * The Stun effect now expires at the stunned unit's side turn end
 * Editor:
   * Redesigned Generate Map dialog to use a real listbox and remember the
     last choice during the same editor session.
   * Fixed stack corruption bug in the Side Setup dialog.
 * Graphics:
   * New generic portraits for the Walking Corpse and Soulless
 * Language and i18n:
   * Updated translations: Galician, Scottish Gaelic, Russian
 * Lua API:
   * New function wesnoth.get_viewing_side
   * New function wesnoth.remove_dialog_item
 * Multiplayer:
   * A New Land:
     * Removed the ability to select individual factions when using map
       settings as this breaks player recruit lists (bug #23593).
   * Era names no longer support formatting markup in the game setup screen.
   * Removed the Silver Mage from the available leaders for the Rebels faction